--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fruntier_db
+spring.datasource.username=root
+spring.datasource.password=wasd1017
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
