--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fruntier_db
-spring.datasource.username=root
-spring.datasource.password=wasd1017
+spring.datasource.username=fruntier
+spring.datasource.password=1Q2w3e4r!@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
