--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root=INFO
+logging.level.com.fruntier.fruntier=DEBUG
