--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.root=INFO
-logging.level.com.fruntier.fruntier=DEBUG
+logging.level.com.fruntier.fruntier=INFO
