--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,16 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
+
+	//프로토타입 빈 inject 기능 있는 라이브러리(JSR-330)
+	implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
+	//Lombok library 추가 시작
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.30'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+	//Lombok library 추가 끝
 }
 
 tasks.named('test') {
